--- a/package.json
+++ b/package.json
@@ -12,20 +12,26 @@
     "@auth/prisma-adapter": "^1.0.14",
     "@hookform/resolvers": "^3.3.4",
     "@prisma/client": "^5.8.0",
+    "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-slot": "^1.0.2",
+    "@uploadthing/react": "^6.1.0",
     "bcryptjs": "^2.4.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
+    "date-fns": "^3.2.0",
     "lucide-react": "^0.309.0",
     "next": "14.0.4",
     "next-auth": "^5.0.0-beta.4",
     "react": "^18",
     "react-dom": "^18",
+    "react-dropzone": "^14.2.3",
     "react-hook-form": "^7.49.3",
     "react-hot-toast": "^2.4.1",
+    "react-icons": "^5.0.1",
     "tailwind-merge": "^2.2.0",
     "tailwindcss-animate": "^1.0.7",
+    "uploadthing": "^6.1.1",
     "zod": "^3.22.4"
   },
   "devDependencies": {
